<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SensorTest</string>
    <string name="hello_world">EZZE SHAAR!!!!!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_qrscan">QRScan</string>
    <string name="QR_Scan">QR Scan</string>
    <string name="edit_code">Generate QR code</string>
    <string name="showQRCode">Generate QR Code</string>
    <string name="title_activity_linear_acceleretion">Sensors Activity</string>
    <string name="Sensor">Sensors</string>
    <string name="title_activity_acceleration_sensor">AccelerationSensorActivity</string>
    <string name="startLightSensor">Light Sensor</string>
    <string name="startAccelSensor">Linear Acceleration</string>
    <string name="startAzymuthSensor">Azymuth Sensor</string>
    <string name="startPressureSensor">Pressure Sensor</string>
    <string name="startMagneticSensor">Magnetic Sensor</string>
   
    
     

</resources>